2007-11-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c: 
	x-yelp-toc uri scheme frags now strip leading '#' 
	and '?'s (bug #482290)
	
	* src/yelp-window.c: 
	Fix debug build (bug #492882)
	
	* src/yelp-window.c: 
	Fix stupidity in loading HTML docs
	(bug #493594 - Matthias Clasen)

	* src/yelp-search-parser.c: 
	Fix NULL-checking of URI in slow search
	(bug #493751)

=== 2.20.0 ===

2007-09-17  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version 2.20.0

2007-09-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make sure we jump to anchors (Don)

	* src/yelp-docbook.c:
	- Set automatic IDs on all divisions, not just chunks

2007-09-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-docbook.c:
	- Pass the computed chunk depth to the stylesheets

2007-09-06  Don Scorgie  <dscorgie@svn.gnome.org>

	* stylesheets/toc2html.xsl:
	* stylesheets/info2html.xsl:
	* stylesheets/man2html.xsl:
	Respect theme settings again

2007-09-05  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-transform.c: 
	Fix potential crasher in transform + various
	other minor fixes
	(based on patch from Hans Petter Jansson - bug #469436)

	* src/yelp-window.c:
	Fix potential abuse of freed strings
	(patch from Hans Petter Jansson - bug #469438)
	
	* data/icons/yelp-icon-big.png:
	New tango-ified version

2007-09-03  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c:
	If mime type isn't detected, don't crash
	bug #472128 based on patch by Hans Petter Jansson
	
	* src/yelp-debug.c:
	* src/yelp-search-parser.c:
	C89 fixes from Jens Granseuer (bug #472489)

2007-08-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Removing a debugging printf I'd accidentally left in

2007-08-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Use g_filename_to_uri to ensure file URIs are right, fixed broken figures

2007-08-20  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-settings.c:
	* src/yelp-settings.h: