@@ -1,3 +1,12 @@
+2007-11-27  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-toc.c:
+	* src/yelp-search-parser.c:
+	* src/yelp-utils.c:
+	* data/toc.xml.in:
+	* stylesheets/toc2html.xsl:
+	Port to Rarian 0.8 series
+
 2007-11-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c: 
